Fix spacing and font

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -8,6 +8,6 @@ body {
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
-  font-family: 'acuta', sans-serif;
+  font-family: sans-serif;
   font-weight: 400;
 }
